--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "electron-download-manager": "^2.1.2",
     "electron-log": "^4.4.8",
     "electron-shutdown-command": "^2.0.1",
     "electron-updater": "^5.2.1",
